--- a/README
+++ b/README
@@ -1,8 +1,8 @@
-This directory contains the es operating system.
+This directory contains ES operating system.
 
-The es operating system is open source software.  See the file COPYING
-for copying permission.  The manuals, and some of the software
-programs, are under different terms; see the individual source files
-for details.
+ES operating system is open source software.  See the file LICENSE for copying
+permission. The manuals, and some of the software programs, are under different
+terms; see the individual source files for details.
 
-See http://sourceforge.jp/projects/nes/ for how to report bugs usefully.
+See http://code.google.com/p/es-operating-system/ for how to report bugs
+usefully.
