--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,32 @@
-                              es 0.1.1
+News about ES releases
+----------------------
 
-December 10, 2007
+
+Release 0.1.2  April 5, 2008
+----------------------------
+
+This is the first ES operating system release from Google Code. ES operating
+system is now under the copyright of both Nintendo Co., Ltd. and Google Inc.
+In this release, the license has been changed from "Historical Permission
+Notice and Disclaimer" to "Apache License 2.0". Our appreciation goes to
+people at Nintendo and Google who helped make this happen, and especially to
+Genyo Takeda at Nintendo. We are also grateful to people at SourceForge.jp
+for their support to our former project site in SourceForge.jp. Even though
+ES is no longer a research project at Nintendo, the ongoing development of
+ES will continue to make it useful for everyone in the future.
+
+Technically, there are several bug fixes in this release so you can build ES
+on x86 Linux operating system including Fedora and Ubuntu and on Mac OS X
+Leopard with XCode, in addition to x64 Fedora on which ES has been developed
+mainly so far. Another noticeable change is now esidl IDL compiler 
+automatically adds the "I" prefix to each interface class name in the 
+generated C++ header files; so you don't have to add the "I" prefixes to the
+interface names in the IDL files and in ECMAScript source files. For a 
+complete list of changes, please see the ChangeLog file.
+
+
+Release 0.1.1  December 10, 2007
+--------------------------------
 
 In this release, a text enhancement for the CanvasRenderingContext2D
 interface has been added to the console service. Plus, by refining the
@@ -11,3 +37,4 @@ Note: The patch files for newlib and fontconfig have been updated with
 this release. Due to the change made to the definition of pthread_mutex_t,
 please rebuild gcc and othere additional libraries before building the es
 operating system.
+
