--- a/README
+++ b/README
@@ -1,8 +1,8 @@
 This directory contains ES operating system.
 
-ES operating system is open source software.  See the file LICENSE for copying
-permission. The manuals, and some of the software programs, are under different
-terms; see the individual source files for details.
+ES operating system is open source software. See the file LICENSE for 
+copying permission. The manuals, and some of the software programs, are
+under different terms; see the individual source files for details.
 
 See http://code.google.com/p/es-operating-system/ for how to report bugs
 usefully.
