--- a/cmd/squeak-3.7.1/README
+++ b/cmd/squeak-3.7.1/README
@@ -5,9 +5,9 @@ version of the Squeak license will be available at
 
 ---------------------------------------------------------------------------
 
-ES operating system is open source software.  See the file LICENSE for copying
-permission. The manuals, and some of the software programs, are under different
-terms; see the individual source files for details.
+ES operating system is open source software. See the file LICENSE for 
+copying permission. The manuals, and some of the software programs, are
+under different terms; see the individual source files for details.
 
 See http://code.google.com/p/es-operating-system/ for how to report bugs
 usefully.
